--- a/index.html
+++ b/index.html
@@ -42,6 +42,8 @@
             <i class="fa-solid fa-user" style="color: #121013;"></i>
 
         </div>
+        <div class="navbar__s4">
+            <i class="fa-solid fa-bars"></i> </div>
 
 
 
